[metadata]
name = bertho-toolkit
version = 0.1.0
author = Matheus Bertho
author_email = matheus.berthot@gmail.com
description = Personal Python toolkit for file management, environment variables and terminal logging.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bertho-toolkit/bertho-python-toolkit

project_urls =
    PyPI Page = https://pypi.org/project/bertho-toolkit/
    Source Code = https://github.com/bertho-toolkit/bertho-python-toolkit
    Issue Tracker = https://github.com/bertho-toolkit/bertho-python-toolkit/issues

license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

